--- a/prob2_2025/trans.html
+++ b/prob2_2025/trans.html
@@ -536,7 +536,32 @@ to  compensate by growing taller,
 
 <h1><a
 name="Using Jacobian (part 2)">Using Jacobian (part 2)</a></h1>
-Now we look at the bivariate case. First a simple case. Suppose we start with some $(X,Y)$
+Now we are about to generalise the idea we learned in the last section to the bivariate (or multivariate) set up. This will
+ make use of a concept called the Jacobian. 
+<blockquote>
+<img src="image/alert.png">You might benefit from <a href="https://youtu.be/zm3L8Dw79xA?si=IVz7PWwway-myQ3R">this introductory  video
+ that I have made for Jacobians</a>. The video is about 21 min long, which is too long for my taste. You may like to navigate
+ to relevant portions of it using the following guideline:
+<ul>
+
+<li>
+<a href="https://youtu.be/zm3L8Dw79xA?si=IVz7PWwway-myQ3R&t=0s">0:00</a>: Casting univariate
+ differentiation into a form suitable for generalisation. </li>
+
+<li>
+<a href="https://youtu.be/zm3L8Dw79xA?si=IVz7PWwway-myQ3R&t=271s">4:31</a>: Differentiation of $f:{\mathbb R}^n\rightarrow{\mathbb R}^m$ </li>
+
+<li>
+<a href="https://youtu.be/zm3L8Dw79xA?si=IVz7PWwway-myQ3R&t=514s">8:34</a>: Geometric
+ interpretation of Jacobian matrices </li>
+
+<li>
+<a href="https://youtu.be/zm3L8Dw79xA?si=IVz7PWwway-myQ3R&t=905s">15:05</a>: Determinant of Jacobian </li>
+
+</ul>
+
+</blockquote>
+First we look at the bivariate case using  a simple example. Suppose we start with some $(X,Y)$
  distributed uniformly on the unit square. As in the univariate case, we split $[0,1]$  into  10 equal subintervals.
  We do this along both the axes, creating a square grid.
 <center>
