--- a/prob2_2025/normal.html
+++ b/prob2_2025/normal.html
@@ -152,16 +152,25 @@ function myFunction() {
 <h3>Multivariate normal and related distributions</h3>
 <ul>
 <li>
-<a href="#Multivariate normal">Multivariate normal</a>
+<a href="#Multivariate normal distribution (part 1)">Multivariate normal distribution (part 1)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Nonsignular and singular">Nonsignular and singular</a>
-</li>
-<li>&nbsp;&nbsp;&nbsp;
-<a href="#Properties">Properties</a>
+<a href="#Nonsingular and singular">Nonsingular and singular</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 1">Problem set 1</a>
+</li>
+<li>
+<a href="#Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 2">Problem set 2</a>
+</li>
+<li>
+<a href="#Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 3">Problem set 3</a>
 </li>
 <li>
 <a href="#$\chi^2$  distribution">$\chi^2$  distribution</a>
@@ -170,22 +179,28 @@ function myFunction() {
 <a href="#Geometry of $\chi^2_{(k)}$">Geometry of $\chi^2_{(k)}$</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 2">Problem set 2</a>
+<a href="#Problem set 4">Problem set 4</a>
 </li>
 <li>
 <a href="#$t$  and $F$  distributions">$t$  and $F$  distributions</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 3">Problem set 3</a>
+<a href="#$t$  distributions">$t$  distributions</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#$F$  distributions">$F$  distributions</a>
+</li>
+<li>&nbsp;&nbsp;&nbsp;
+<a href="#Problem set 5">Problem set 5</a>
 </li>
 <li>
 <a href="#Sampling distributions for normal sample">Sampling distributions for normal sample</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
-<a href="#Problem set 4">Problem set 4</a>
+<a href="#Problem set 6">Problem set 6</a>
 </li>
 <li>
-<a href="#Problems for practice">Problems for practice</a>
+<a href="#Miscellaneous problems">Miscellaneous problems</a>
 </li>
 </ul>
 <hr/>
@@ -194,42 +209,108 @@ $\newcommand{\k}[1]{\chi^2_{(#1)}}$
 <title>Multivariate normal and related distributions</title>
 
 <h1><a
-name="Multivariate normal">Multivariate normal</a></h1>
+name="Multivariate normal distribution (part 1)">Multivariate normal distribution (part 1)</a></h1>
 Here we shall discuss the most commonly used multivariate distribution, the multivarite normal distribution. 
 <fieldset>
 <legend><b>Definition:  Multivariate normal</b></legend>
 Let $\v X = (X_1,...,X_n)'$  be a random vector, where  $X_1,...,X_n$  are IID
  $N(0,1).$ Let $A_{m\times n}$  be any fixed matrix, and $\v b_{m\times1}$  be any
  fixed vector. Then the joint distribution of $\v Y=A\v X + \v b$  is called $m$-dimensional
- multivariate normal. 
+<b><font color="red" size="40">multivariate normal</font></b>. 
 </fieldset>
 Clearly, the distribution depends on $A$  and $\v b.$ However, different values of $A$  and $\v b$  may
- lead to the same multivariate normal. To explore this dependence we first consider $\v X,$  which has characteristic function 
-$$E(\exp(i\v t'\v X) = \exp\left(-\frac 12\v t'\v t\right).$$ 
-So the characteristic function of $\v Y = A\v X + \v b$  is 
-$$E(\exp(i\v t'(A\v X+\v b)) =E(\exp(i((A'\v t)'\v X+\v t'\v b)) = \exp\left(-\frac 12\v t'AA'\v t+i\v t'\v b\right).$$
-This involves $\v b$  directly, but $A$  only through $AA'.$  So we parametrise
- multivariate normal by $\v b$  and $AA'.$  It will turn out that $E(\v Y)=\v b$   and $V(\v Y) = AA'.$ 
+ lead to the same multivariate normal. It turns out that $A_1,\v b_1$  and $A_2,\v
+ b_2$  lead to the same distribution if and only if $A_1A_1' = A_2A_2'$  and $\v b_1=\v
+ b_2.$  
+In other words, the distribution involves $\v b$  directly, but $A$  only through $AA'.$ 
+So we parametrise
+ multivariate normal by $\v b$  and $AA'.$ 
  These are more commonly denoted by $\v \mu$  and $\Sigma,$  and $m$-dimensional multivariate normal with
- these parameters is denoted by $N_m(\v mu, \Sigma).$  The abbreviation MVN is also used for multivariate normal.
+ these parameters is denoted by $N_m(\v \mu, \Sigma).$  The abbreviation MVN is also used for multivariate normal.
+<p></p>
+Notice that $\v\mu$  can be any vector in ${\mathbb R}^m$  and $\Sigma$  can be any $m\times m$  NND matrix.
+ Here we used the following fact from linear algebra:
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+A matrix $\Sigma_{m\times m}$  is NND if and only if $\Sigma = AA'$  for some $A_{m\times m}.$  
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>Should be covered in your Vectors and Matrices course.<b><i>[QED]</i></b>
+</p>
+
+<p></p>
+Since the MVN is a family of distributions some of which have density while others don't, we generally work in terms of the
+ characteristic function in general. 
 <p></p>
 
 <h2><a
-name="Nonsignular and singular">Nonsignular and singular</a></h2>
+name="Nonsingular and singular">Nonsingular and singular</a></h2>
 The density of $\v X$  is 
-$$(2\pi)^{-\frac n2}\exp\left(-\frac 12\v x'\v x\right)\mbox{ for }\v x\in{\mathbb R}^n.$$
+$$\frac{1}{\sqrt{(2\pi)^n}}\exp\left(-\frac 12\v x'\v x\right)\mbox{ for }\v x\in{\mathbb R}^n.$$
 If $A$  is a nonsingular matrix, then the transform $\v X\mapsto A\v X+\v b$  is a bijection. So the Jacobian formula
  gives the following density for $\v Y = A\v X+\v b$
-$$(2\pi det(AA'))^{-\frac n2}\exp\left(-\frac 12\v y'(AA') ^{-1}\v y\right)\mbox{ for }\v y\in{\mathbb R}^n.$$ 
-This is sometimes called a nonsingular multivariate normal to distinguish from the case where $A$  is singular, where
+$$\frac{1}{\sqrt{(2\pi)^n det(AA')}}\exp\left(-\frac 12\v y'(AA') ^{-1}\v y\right)\mbox{ for }\v y\in{\mathbb R}^n.$$ 
+Here we have used the fact that $\sqrt{det(AA')} = \sqrt{det(A)det(A')} = |det(A)|.$
+<p></p>
+The case where $A$  is nonsingular  is sometimes called a nonsingular multivariate normal to
+ distinguish from the case where
+ $A$  is singular, where
  $\v Y$  does not admit a density. 
 <p></p>
+It is easy to find the mean vector and variance matrix of a multivariate normal distribution:
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+If $\v Y\sim N_m(\v\mu,\Sigma)$, then  $E(\v Y)=\v b$   and $V(\v Y) = \Sigma.$ 
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Let $\Sigma = AA'.$  Then $\v Y$  has the same distribution as $A\v X+\v \mu$  where the $\v X$  has
+ components IID $N(0,1).$
+<p></p>
+So $E(\v X) = \v 0$  and $V(\v X) = I.$  
+<p></p>
+Hence $E(\v Y) = E(A\v X+\v\mu) = A E(\v X)+\v\mu = \v\mu,$
+and $V(\v Y) = V(A\v X+\v\mu) = A V(\v X)A' = AA'=\Sigma.$ 
+<b><i>[QED]</i></b>
+</p>
+
+<h2><a
+name="Problem set 1">Problem set 1</a></h2>
 
 <p>
 <b>EXERCISE 1:</b>&nbsp;Describe $N_1(5,0)$  distribution.</p>
 
+<h1><a
+name="Multivariate normal distribution (part 2)">Multivariate normal distribution (part 2)</a></h1>
+One trouble with multivariate normal distribution is that not all members of this famiy admit a density. Also there is no
+ closed form expression for the CDF. Fortunately, its characteristic function has a simple form, and is the best way to deal
+ with all members of the multivariate normal distribution family in general. 
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+The characteristic function of $N_m(\v\mu,\Sigma)$  is $\exp\left(-\frac 12\v t'\Sigma\v t+i\v t'\v \mu\right).$
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>
+Let $\Sigma = AA'.$  Then we can think of $N_m(\v\mu,\Sigma)$  as the distribution of $A\v X+\v\mu$  where
+ $\v X$  has IID $N(0,1)$  components.
+<p></p>
+Then $\v X$ has characteristic function 
+$$E(\exp(i\v t'\v X) = \exp\left(-\frac 12\v t'\v t\right).$$ 
+So the characteristic function of $A\v X + \v \mu$  is 
+$$E(\exp(i\v t'(A\v X+\v b)) =E(\exp(i((A'\v t)'\v X+\v t'\v b)) = \exp\left(-\frac 12\v t'AA'\v t+i\v t'\v b\right)=\exp\left(-\frac 12\v t'\Sigma\v t+i\v t'\v \mu\right).$$
+<b><i>[QED]</i></b>
+</p>
+
 <h2><a
-name="Properties">Properties</a></h2>
+name="Problem set 2">Problem set 2</a></h2>
+
+<p></p>
+
+<h1><a
+name="Multivariate normal distribution (part 3)">Multivariate normal distribution (part 3)</a></h1>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
@@ -240,7 +321,7 @@ If $X_1,...,X_n$  are IID $N(\mu, \sigma^2),$  then  $\v X = (X_1,...,X_n)'\sim 
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-If $\v X\sim N_n(\v \mu, \Sigma)$  and $B_{m\times n}$  and $\v c_{m\times 1$  are fixed, then $B\v X+\v c\sim N_m(B\v \mu + \v c, B\Sigma B').$
+If $\v X\sim N_n(\v \mu, \Sigma)$  and $B_{m\times n}$  and $\v c_{m\times 1}$  are fixed, then $B\v X+\v c\sim N_m(B\v \mu + \v c, B\Sigma B').$
 </fieldset>
 
 <p>
@@ -260,20 +341,45 @@ If $\v X = (X_1,...,X_n)'\sim N_n(\v \mu,\Sigma),$  then any subvector of  $\v X
 <p></p>
 If two random variables are
 independent, they must also be uncorrelated. However, the converse is not true. For multivariate normal the converse is also
- true.
+ true. 
 <fieldset>
-<legend><b><i>Theorem</i></b></legend>If $\v X = (X_1,...,X_n)'\sim N_n(\v \mu,\Sigma),$  then $X_i$  and $X_j$  are
- independent if and only if $\sigma_{ij} = 0.$</fieldset>
+<legend><b><i>Theorem</i></b></legend>If 
+$$\v X = \left[\begin{array}{ccccccccccc}\v X_1\\\v X_2
+\end{array}\right]'\sim N_n\left(\underbrace{\left[\begin{array}{ccccccccccc}\v \mu_1\\\v \mu_2
+\end{array}\right] }_{\v\mu},
+\underbrace{\left[\begin{array}{ccccccccccc}\Sigma_{11} &amp;  \Sigma_{12}\\\Sigma_{12}' &amp; \Sigma_{22}
+\end{array}\right] }_\Sigma\right),$$  then
+ $\v X_1$  and $\v X_2$  are
+ independent if and only if $\Sigma_{12} = O.$</fieldset>
 
 <p>
 <b><i>Proof:</i></b>
-First obtain the joint distribution of $(X_i,X_j)$  using the last theorem. Then show that characteristic function factors
- out.
+The characteristic function of $\v X$  is 
+$\xi_{\v X}(\v t)=\exp\left(-\frac 12\v t'\Sigma\v t+i\v t'\v \mu\right).$
+<p></p>
+Writing $\v t =\left[\begin{array}{ccccccccccc}\v t_1\\\v t_2
+\end{array}\right], $  we have
+$$\v t'\Sigma\v t =\left[\begin{array}{ccccccccccc}\v t_1' &amp; \v t_2'
+\end{array}\right]\left[\begin{array}{ccccccccccc}\Sigma_{11} &amp;  \Sigma_{12}\\\Sigma_{12}' &amp; \Sigma_{22}
+\end{array}\right]\left[\begin{array}{ccccccccccc}\v t_1\\\v t_2
+\end{array}\right]
+= \v t_1'\Sigma_{11}\v t_1+ \v t_1'\Sigma_{22}\v t_2,$$
+since $\Sigma_{12}=O.$
+<p></p>
+Again
+$$\v t'\v \mu = \left[\begin{array}{ccccccccccc}\v t_1' &amp; \v t_2'
+\end{array}\right]\left[\begin{array}{ccccccccccc}\v \mu_1 &amp; \v \mu_2
+\end{array}\right]  = \v t_1'\v \mu+\v t_2'\v \mu_2$$
+So the characteristic function factorises as
+$$\xi_{\v X}(\v t)\equiv \xi_{\v X_1}(\v t_1)\xi_{\v X_1}(\v t_2),$$
+and hence $\v X_1$  and $\v X_2$  are independent, as required.
 <b><i>[QED]</i></b>
 </p>
 
+<p></p>
+
 <h2><a
-name="Problem set 1">Problem set 1</a></h2>
+name="Problem set 3">Problem set 3</a></h2>
 
 <p></p>
 Next we shall discuss some distributions related to the normal distribution.
@@ -364,24 +470,112 @@ If $X_1,...,X_n$  are independent $N(\mu_i,1),$  then the distribution $\sum X_i
 </fieldset>
 
 <h2><a
-name="Problem set 2">Problem set 2</a></h2>
+name="Problem set 4">Problem set 4</a></h2>
 
 <h1><a
 name="$t$  and $F$  distributions">$t$  and $F$  distributions</a></h1>
 
 <h2><a
-name="Problem set 3">Problem set 3</a></h2>
+name="$t$  distributions">$t$  distributions</a></h2>
+
+<fieldset>
+<legend><b>Definition: $t$-distribution</b></legend>
+If $X\sim N(0,1)$  and $Y\sim\k n$  and they are independent, then the distribution of $X/(\sqrt{Y/n})$  is
+ called $t$-distribution with $n$  degrees of freedom. Here $n&gt;0$  need not be an integer.
+</fieldset>
+Let us derive density of $t$-distribution with $n$  degrees of freedom. We shall do this step by step. 
+<p></p>
+From $Y$  we shall pass on to $Z = \sqrt{\frac Yn}$  and then to $\frac XZ.$  
+<p></p>
+Y has density $f_Y(y) =\left\{\begin{array}{ll}\mbox{const } e^{-\frac y2}y^{\frac n2-1}&\text{if }y&gt;0\\ 0&\text{otherwise.}\end{array}\right. $
+<p></p>
+The transform to go from $Y$  to $Z$  is $z = h(y) = \sqrt{\frac yn}$  with inverse $y = h ^{-1}(z) = n z^2.$ 
+<p></p>
+Hence, by the Jacobian formula, $Z$  has density
+$$f_Z(z) = 2nz f_Y(nz^2) = \left\{\begin{array}{ll}\mbox{const } e^{-nz^2/2} z^{n-2}&\text{if }z&gt;0\\ 0&\text{otherwise.}\end{array}\right.$$
+Next we shall employ the quotient formula to find density of $T = \frac XZ$  as 
+$$\begin{eqnarray*}
+f_T(t) 
+&amp; = &amp; \int_0^\infty u f_X(tu) f_Z(u)\, du\\
+&amp; = &amp; \mbox{const} \int_0^\infty u e^{-t^2u^2/2} e^{-nu^2/2} u^{n-2}\, du\\
+&amp; = &amp; \mbox{const} \int_0^\infty  u^{n-1} e^{-(t^2+n)u^2/2}\, du.
+\end{eqnarray*}$$
+Substituting $v = \frac{u^2}{2}$  we have 
+$$\begin{eqnarray*}
+&amp; = &amp; \mbox{const} \int_0^\infty  v^{\frac{n-1}{2}} e^{-(t^2+n)v}\, dv\\
+&amp; = &amp; \mbox{const} \int_0^\infty  v^{\frac{n+1}{2}-1} e^{-(t^2+n)v}\, dv\\
+&amp; = &amp; \mbox{const } \Gamma\left(\frac{n+1}{2}\right) (t^2+n)^{-\frac{n+1}{2}}
+&amp; = &amp; \mbox{const } (t^2+n)^{-\frac{n+1}{2}}.
+\end{eqnarray*}$$
+If you keep track of the constants, you will find that it is
+$$\frac{\Gamma\left(\frac{n+1}{2}\right)}{\sqrt{n\pi}\Gamma\left(\frac{n}{2}\right)}.$$
+It should not be difficult to see that $t$-density is symmetric around 0. The densities are much like the $N(0,1)$ 
+ density. They lie somewhere in-between the Cauchy density and $N(0,1)$  density. As the degrees of freedom increase
+ to $\infty,$  the $t$-distribution approaches $N(0,1).$  For degrees of freedom more than 40, the $t$-density
+ is virtually indisguishable from that of $N(0,1)$  density.
+<h2><a
+name="$F$  distributions">$F$  distributions</a></h2>
+
+<fieldset>
+<legend><b>Definition: $F$-distribution</b></legend>
+If $X\sim \k m$  and $Y\sim \k n$  are independent random variables, then the distribution of $\frac{X/m}{Y/n}$  is
+ called $F$ -distribution with numerator degrees of freedom $m$  and denominator degrees of freedom $n.$
+</fieldset>
+The density of $X$  is $f_X(x) =\left\{\begin{array}{ll}\mbox{const }x^{\frac m2-1}e^{-\frac x2}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right. $
+<p></p>
+Similarly, 
+the density of $Y$  is $f_Y(x) =\left\{\begin{array}{ll}\mbox{const }y^{\frac n2-1}e^{-\frac y2}&\text{if }y&gt;0\\ 0&\text{otherwise.}\end{array}\right. $
+<p></p>
+Hence density of $Z = \frac XY$  is 
+$$\begin{eqnarray*}
+f_Z(z)
+&amp; = &amp; \int_0^\infty u f_X(zu)f_Y(u)\, du\\
+&amp; = &amp; \mbox{const}\int_0^\infty u (zu)^{\frac m2-1}e^{-\frac{zu}{2}} u^{\frac n2-1}e^{-\frac u2}\, du\\
+&amp; = &amp; \mbox{const }z^{\frac m2-1}\int_0^\infty  u^{\frac{m+n}{2}-1}e^{-\frac{z+1}{2}u}\, du\\
+&amp; = &amp; \mbox{const }z^{\frac m2-1}\Gamma\left(\frac{m+n}{2}\right) \left(\frac{z+1}{2}\right)^{-\frac{m+n}{2}}\\
+&amp; = &amp; \mbox{const }z^{\frac m2-1}(z+1)^{-\frac{m+n}{2}}.
+\end{eqnarray*}$$
+Hence the density of $\frac nmZ$  is 
+$$f(x) =\left\{\begin{array}{ll}\mbox{const }x^{\frac m2-1}(mx+n)^{-\frac{m+n}{2}}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right. $$
+<p></p>
+
+<h2><a
+name="Problem set 5">Problem set 5</a></h2>
 
 <h1><a
 name="Sampling distributions for normal sample">Sampling distributions for normal sample</a></h1>
 
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+If $X_1,...,X_n$  are IID $N(\mu, \sigma^2),$  then for $a_1,...,a_n\in{\mathbb R}$   we have $\sum a_i X_i\sim N\left(\mu\sum a_i, \sigma^2\sum a_i^2\right).$
+</fieldset>
+
+<p>
+<b><i>Proof:</i></b>Easy.<b><i>[QED]</i></b>
+</p>
+
+<p></p>
+
+<fieldset>
+<legend><b><i>Theorem</i></b></legend>
+Let $X_1,...,X_n$  be IID $N(\mu, \sigma^2).$  Then 
+<ol type="">
+
+<li>$\overline X\sim N\left(\mu,\frac{\sigma^2}{n}]\right)$</li>
+
+</ol>
+
+<p></p>
+
+</fieldset>
+
 <h2><a
-name="Problem set 4">Problem set 4</a></h2>
+name="Problem set 6">Problem set 6</a></h2>
 
 <p></p>
 
 <h1><a
-name="Problems for practice">Problems for practice</a></h1>
+name="Miscellaneous problems">Miscellaneous problems</a></h1>
 
 <p>
 <b>EXERCISE 4:</b>&nbsp;If $X$  has a density of the form $f(x) \propto \exp(a+b+cx^2),~~x\in{\mathbb R},$  then
