--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -618,7 +618,9 @@ name="Problem set 4">Problem set 4</a></h2>
 <p></p>
 
 <p>
-<b>EXERCISE 14:</b>&nbsp;If $(X,Y)$  has joint density $e^{-(x+y)}$  for $x,y&gt;0,$  (and 0 else), then find $P(X^2+Y^2&lt;1).$</p>
+<b>EXERCISE 14:</b>&nbsp;If $(X,Y)$  has joint density $e^{-(x+y)}$  for $x,y&gt;0,$  (and 0 else), then find $P(X^2+Y^2&lt;1).$
+Leave the answer in terms of a single-variable integral.
+</p>
 
 <p></p>
 
