--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -909,7 +909,8 @@ $$h(t) = \frac{f(t)}{1-F(t)},$$
 when $F(t) &lt; 1.$
 </fieldset>
 We can think of it as 
-$$\lim_{\delta t\rightarrow 0+} P(X\leq t+\delta t | X &gt; t) =\lim_{\delta t\rightarrow 0+} \frac{P(X\in [t,t+\delta t] }{ P(X &gt; t) }.$$
+$$\lim_{\delta t\rightarrow 0+} \frac{P(X\leq t+\delta t | X &gt; t)}{\delta t} =\lim_{\delta t\rightarrow 0+} \frac{P(X\in
+ [t,t+\delta t] }{ P(X &gt; t) \delta t}.$$
 <p></p>
 
 <p>
