--- a/prob2_2025/contabs.html
+++ b/prob2_2025/contabs.html
@@ -927,18 +927,23 @@ $$h(t) = \frac{e^{-t}}{1-(1-e^{-t})} = 1.$$
 <h2><a
 name="Problem set 9">Problem set 9</a></h2>
 ::<p>
-<b>EXERCISE 38:</b>&nbsp;<font size="-2">[rosspdf17.png]</font><img width="" src="image/rosspdf17.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 38:</b>&nbsp;<font size="-2">[rosspdf28.png]</font><img width="" src="image/rosspdf28.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 39:</b>&nbsp;<font size="-2">[rosspdf18.png]</font><img width="" src="image/rosspdf18.png" style="vertical-align:text-top;"></p>
+<b>EXERCISE 39:</b>&nbsp;<font size="-2">[rosspdf29.png]</font><img width="" src="image/rosspdf29.png" style="vertical-align:text-top;"></p>
 ::<p>
-<b>EXERCISE 40:</b>&nbsp;<font size="-2">[rosspdf28.png]</font><img width="" src="image/rosspdf28.png" style="vertical-align:text-top;"></p>
-::<p>
-<b>EXERCISE 41:</b>&nbsp;<font size="-2">[rosspdf29.png]</font><img width="" src="image/rosspdf29.png" style="vertical-align:text-top;"></p>
-::<p>
-<b>EXERCISE 42:</b>&nbsp;<font size="-2">[rosspdf39.png]</font><img width="" src="image/rosspdf39.png" style="vertical-align:text-top;">
+<b>EXERCISE 40:</b>&nbsp;<font size="-2">[rosspdf39.png]</font><img width="" src="image/rosspdf39.png" style="vertical-align:text-top;">
 <p></p>
 You may like to use the result $\int_0^\infty e^{-x^2/2}, dx = \sqrt{\frac \pi2}.$
 </p>
+For the next three problems you need to work out the distribution from a given hazard function. Use $f = F'$  to turn
+ the definition of hazard function into a differential equation:
+$$\frac{F'(x)}{1-F(x)} = h(x),$$
+and then solve it. Find the value for the constant of integration by using the fact that $F(x)\rightarrow 0$  as $x\rightarrow -\infty.$
+<p></p>
+::<p>
+<b>EXERCISE 41:</b>&nbsp;<font size="-2">[rosspdf17.png]</font><img width="" src="image/rosspdf17.png" style="vertical-align:text-top;"></p>
+::<p>
+<b>EXERCISE 42:</b>&nbsp;<font size="-2">[rosspdf18.png]</font><img width="" src="image/rosspdf18.png" style="vertical-align:text-top;"></p>
 ::<p>
 <b>EXERCISE 43:</b>&nbsp;<font size="-2">[rosspdf40.png]</font><img width="" src="image/rosspdf40.png" style="vertical-align:text-top;"></p>
 
