--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1318,7 +1318,7 @@ is the product of the marginal CDFs?
 
 <h1><a
 name="Expectation using joint density">Expectation using joint density</a></h1>
-<a href="https://youtu.be/61Se7jsTTkk">Video for this section</a>
+<a href="https://youtu.be/udq0I74hJMs">Video for this section</a>
 <p></p>
 Suppose $X,Y$  are jointly  distributed. We often need to find the expectation of $h(X,Y)$  for some given function
  $h(x,y).$  For this we can of course employ the definition by first defining a new random
@@ -1327,7 +1327,7 @@ But a simpler alternative exists.
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 Let $(X,Y)$  have joint density $f(x,y).$  If $h(X,Y)$  is a non-negative random variable, then 
-$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)\, dx\,dy.$$
+$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)f(x,y)\, dx\,dy.$$
 This always exists (though may be $\infty$). 
 </fieldset>
 This theorem is the obvious generalisation of the univatiate density case, and like that will be proved once we learn about
@@ -1356,7 +1356,7 @@ Again, as in univriate density case, we have a simpler formula for the special c
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
 Let $(X,Y)$  have joint density $f(x,y).$  If $h(X,Y)$  is a  random variable with $E(|h(X,Y)|) &lt; \infty$,, then 
-$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)\, dx\,dy.$$
+$$E(h(X,Y)) = \int_{-\infty}^\infty\int_{-\infty}^\infty h(x,y)f(x,y)\, dx\,dy.$$
 This must be finite.
 </fieldset>
 
