--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1377,7 +1377,7 @@ name="Problem set 13">Problem set 13</a></h2>
 
 <p>
 <b>EXERCISE 41:</b>&nbsp;
-Let $(X,Y)$  be uniformly distributed over $S=\{(x,y)~:~0\leq x\leq 1,~x\geq y\}.$
+Let $(X,Y)$  be uniformly distributed over $S=\{(x,y)~:~0\leq x\leq 1,~x\geq y\geq0\}.$
 <ol type="">
 <li>Sketch the set $S$  as a shaded subset of ${\mathbb R}^2.$</li>
 
