--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1611,7 +1611,7 @@ Here $p,q$  are controlled by the ruler. Notice that the matrix in the middle do
  possible way of placing the ruler.
  This matrix is indeed the dispersion matrix we  defined above.
 <p></p>
-Here we talked about 1-dim projection of 2-dim. In general, we do 1-dim projection of $$n$$-dim
+Here we talked about 1-dim projection of 2-dim. In general, we do 1-dim projection of $n$-dim
  data. To see this visually on a computer screen you may like to consider 2-dim projection of
  3-dim data. Run <a href="3dcloud.r">this R code</a>  on <a href="3ddata.txt">this data
  set</a>  to get a 3D scatterplot that you can turn with your mouse. Depending on how you turn
