--- a/prob2_2025/cjoint.html
+++ b/prob2_2025/cjoint.html
@@ -1783,7 +1783,7 @@ name="Problem set 18">Problem set 18</a></h2>
 
 <p>
 <b>EXERCISE 55:</b>&nbsp;Find conditional density of $X$  given $Y=\frac 12$  if the joint density of $(X,Y)$  is </p>
-$$f(x,y) = \left\{\begin{array}{ll}x+y&\text{if }0&lt; x &lt; 1\\ 0&\text{otherwise.}\end{array}\right.$$
+$$f(x,y) = \left\{\begin{array}{ll}x+y&\text{if }0&lt; x,y &lt; 1\\ 0&\text{otherwise.}\end{array}\right.$$
 <h1><a
 name="Conditional density (rigour)">Conditional density (rigour)</a></h1>
 <a href="https://youtu.be/-7x_sra_fyg">Video for this section</a>
