--- a/prob2_2025/trans.html
+++ b/prob2_2025/trans.html
@@ -215,13 +215,13 @@ function myFunction() {
 <a href="#Problem set 10">Problem set 10</a>
 </li>
 <li>
-<a href="#Moment generating function (MGF)">Moment generating function (MGF)</a>
+<a href="#Characteristic function (CF)">Characteristic function (CF)</a>
 </li>
 <li>&nbsp;&nbsp;&nbsp;
 <a href="#Problem set 11">Problem set 11</a>
 </li>
 <li>
-<a href="#Problems for practice">Problems for practice</a>
+<a href="#Miscellaneous problems">Miscellaneous problems</a>
 </li>
 </ul>
 <hr/>
@@ -843,6 +843,8 @@ non-zero constants  $a,b,c,d$  such that $U=aX+bY$  and $V=cX+dY$  are independe
 
 <h1><a
 name="Sum">Sum</a></h1>
+<a href="https://youtu.be/xAPiZWIYiF4">Video for this section</a>
+<p></p>
 Suppose that we are given the joint density of $(X,Y).$  We want to find the density of
  $X+Y.$  Can we use Jacobians for this? Yes, but not directly. The Jacobian technique works
  directly only when we are dealing with transformations from ${\mathbb R}^n$  to ${\mathbb R}^n,$  and
@@ -988,8 +990,12 @@ name="Problem set 10">Problem set 10</a></h2>
 <p></p>
 
 <h1><a
-name="Moment generating function (MGF)">Moment generating function (MGF)</a></h1>
-We have already come across the concept of a <b><font color="red" size="40">moment generating function</font></b>  last semester. Here is the definition
+name="Characteristic function (CF)">Characteristic function (CF)</a></h1>
+We have seen various functions connected with a distribution, PMF, PDF, CDF and MGF. In case,
+ you have forgotten about  the
+ concept of a <b><font color="red" size="40">moment
+ generating function (MGF)</font></b> that we briefly touched upon last
+ semester, here is the definition
  again:
 <fieldset>
 <legend><b>Definition:  Moment generating function (MGF)</b></legend>
@@ -998,52 +1004,74 @@ $M_X(t) = E(e^{Xt})$
 for whatever $t\in{\mathbb R}$  the expectation is finite. (Since $e^{Xt}$  is a positive random
  variable, it's expectation is always defined.)  
 </fieldset>
-
+Out of these only CDF is guaranteed to exist for any random variable. And also uniquely determines
+  a distribution (<i>i.e.</i>, if the CDFs of two random variables match, then their distributions must
+ also match). Unfortunately, CDF does not "play well" with convolution, <i>i.e.</i>, if $X,Y$  are
+ independent then there is no nice formula expressing  the CDF of $X+Y$  in terms of those of $X$  and $Y.$ 
+ There is, however, one such function that combines all the good properties: it exists finitely
+ for all random variables, it uniquely determines a distribution and "plays well" with
+ convolution. Its definition is given below.
+<fieldset>
+<legend><b>Definition: Characteristic function (CF)</b></legend>
+The  <b><font color="red" size="40">characteristic function (CF)</font></b>  of a random variable $X$  is defined as the
+ function $\xi_X:{\mathbb R}\rightarrow{\mathbb C}$  as 
+$\xi_X(t) = E(e^{iXt})$
+for  $t\in{\mathbb R}.$
+</fieldset>
+You may be scared by the unexpected appearance of complex numbers inside the expectation! Just remember that $e^{iXt} = \cos (Xt)+i\sin(Xt).$ 
+ So $\xi_X(t) = E(\cos(Xt))+i E(\sin(Xt)).$
+Since $\cos$  and $\sin$  are both bounded, finite existence of the expectation is not a problem. 
+<p></p>
+In order to do math with $e^{ix}$, , just treat it like any
+ $e^{\mbox{const}\times x}$  <i>e.g.</i>, $e^{3x}$, say. For instance, $\frac{d}{dx}e^{ix} = i e^{ix}$  and $\int e^{ix}\, dx = \frac 1ie^{ix}+$ arbit
+ constant.
+<p></p>
+All these will be justified later (quite easily) in your complex analysis course! 
 <p></p>
 
 <p>
 <b>EXAMPLE 10:</b>&nbsp;
-Find the MGF of $X$  having density $f(x) = \left\{\begin{array}{ll} 3 e^{-3x}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right. $
+Find the CF of $X$  having density $f(x) = \left\{\begin{array}{ll} 3 e^{-3x}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right. $
 <p></p>
 <b>SOLUTION:</b>
-$$E(e^{Xt}) = 3\int_0^ \infty e^{xt}e^{-3x}\, dx = \frac{3}{t-3},$$
-for $t&lt;3.$  
+$$E(e^{iXt}) = 3\int_0^ \infty e^{ixt}e^{-3x}\, dx = 3\int_0^\infty e^{(it-3)x}\, dx = \frac{3}{it-3}$$
+for $t\in{\mathbb R}.$  
  ■
 </p>
-Clearly, for any random variable $X$  we have $M_X(0) = 1.$
+Clearly, for any random variable $X$  we have $\xi_X(0) = 1.$
 <p></p>
-The following two theorems are what make MGF useful.
+The following two theorems are what make CF useful.
 <p></p>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-If $X,Y$  are two random variables such that  $\exists \epsilon&gt;0~~\forall
- t\in(-\epsilon,\epsilon)~~M_X(t) = M_Y(t) &lt; \infty,$   then $X$  and $Y$  must have the same distribution.
+If $X,Y$  are two random variables such that 
+$\xi_X(t) \equiv \xi_Y(t)$,   then $X$  and $Y$  must have the same distribution.
 </fieldset>
 
 <p>
-<b><i>Proof:</i></b>Later in this course.<b><i>[QED]</i></b>
+<b><i>Proof:</i></b>Wil be done next semester.<b><i>[QED]</i></b>
 </p>
 
 <p></p>
 
 <fieldset>
 <legend><b><i>Theorem</i></b></legend>
-If $X,Y$  are independent random variables amd $M_X(t), M_Y(t) &lt; \infty$  for some $t\in{\mathbb R},$  then $M_{X+Y}(t) = M_X(t)M_Y(t).$
+If $X,Y$  are independent random variables, then $\xi_{X+Y}(t) = \xi_X(t)\xi_Y(t)$  for $t\in{\mathbb R}.$
 </fieldset>
 
 <p>
 <b><i>Proof:</i></b>
-Since $X,Y$  are independent, hence so are their functions $e^{Xt}$  and $e^{Yt}.$  
+Since $X,Y$  are independent, hence so are their functions $e^{iXt}$  and $e^{iYt}.$  
 <p></p>
-Since their expectations are finite, so $E(e^{Xt}\times e^{Yt}) = E(e^{Xt})\times E(e^{Yt}).$  Hence the result. 
+Since their expectations are finite, so $E(e^{iXt}\times e^{iYt}) = E(e^{iXt})\times E(e^{iYt}).$  Hence the result. 
 <p></p>
 
 <b><i>[QED]</i></b>
 </p>
 
 <p></p>
-If we know a list of MGFs for some standard distributions, then these two results often help us to
+If we know a list of CFs for some standard distributions, then these two results often help us to
  identify if the convolution
  of two distributions in our list again belong to the list. 
 Here is an example.
@@ -1052,16 +1080,16 @@ Here is an example.
 <p>
 <b>EXAMPLE 11:</b>&nbsp;
 Suppose that you are told that, for $a&gt;0$, the distribution with density 
-$f_a(x) = \left\{\begin{array}{ll}c x^{a-1}e^{-x}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right.$  has MGF
- $M_a(t) = (t-1)^{-a}.$ for $t&lt; 1.$  
+$f_a(x) = \left\{\begin{array}{ll}c x^{a-1}e^{-x}&\text{if }x&gt;0\\ 0&\text{otherwise.}\end{array}\right.$  has CF
+ $M_a(t) = (it-1)^{-a}.$ for $t&lt; 1.$  
 <p></p>
-Show that for $a,b&gt;0$  we have $f_a\star f_b = f_{a+b}.$
+Show that for $a,b&gt;0$  we have $f_a* f_b = f_{a+b}.$
 <p></p>
 <b>SOLUTION:</b>
 You can of course show this directly using the definition of convolution. But that would require you to compute an integral.
- But it is trivial using MGF: $M_a(t)M_b(t) = (t-1)^{-a} (t-1)^{-b} = (t-1)^{-(a+b)}$  for $t &lt; 1.$  
+ But it is trivial using CF: $\xi_a(t)\xi_b(t) = (it-1)^{-a} (it-1)^{-b} = (it-1)^{-(a+b)}$  for $t \in{\mathbb R}.$  
 <p></p>
-Since the MGF is finite for $t\in (-1,1),$  hence the result.
+Since CF uniquely determines the distribution, we get the result.
  ■
 </p>
 
@@ -1069,17 +1097,17 @@ Since the MGF is finite for $t\in (-1,1),$  hence the result.
 name="Problem set 11">Problem set 11</a></h2>
 
 <p>
-<b>EXERCISE 36:</b>&nbsp;Find MGF for the degenerate distribution at $5.$</p>
+<b>EXERCISE 36:</b>&nbsp;Find CF for the degenerate distribution at $5.$</p>
 
 <p></p>
 
 <p>
-<b>EXERCISE 37:</b>&nbsp;Let $X$  have MGF $M_X(t).$  Let $Y = ax+b.$  Find $M_Y(t),$  the MGF of $Y.$</p>
+<b>EXERCISE 37:</b>&nbsp;Let $X$  have CF $\xi_X(t).$  Let $Y = ax+b.$  Find $\xi_Y(t),$  the CF of $Y.$</p>
 
 <p></p>
 
 <h1><a
-name="Problems for practice">Problems for practice</a></h1>
+name="Miscellaneous problems">Miscellaneous problems</a></h1>
 ::<p>
 <b>EXERCISE 38:</b>&nbsp;<font size="-2">[hpstrans1.png]</font><img width="" src="image/hpstrans1.png" style="vertical-align:text-top;"></p>
 ::<p>
